# genro-ws-web

./: .gitignore  CLAUDE.md  NOTICE  README.md  pyproject.toml
roadmap/: VISION.md  scalability.md  spa-application.md
src/genro_ws_web/: __init__.py  application.py  cli.py  connection.py  page.py  startup_page.py  target.py
src/genro_ws_web/demo/: __init__.py  au_customers.py  au_states.py  basic.py  catalog_3000.py  clock.py  cmp_iterate.py  cmp_nested.py  cmp_nested_iterate.py  cmp_single.py  colorpicker.py  db_users.py  desktop.py  feed.py  file_drawer.py  index.py  inspector.py  invoice.py  nested_borders.py  scale_30.py  scale_300.py  scale_3000.py  scale_base.py  web_colorpicker.py  widgets.py
src/genro_ws_web/resources/: __init__.py  genro.js  ws_live.css
src/genro_ws_web/resources/components/: __init__.py
src/genro_ws_web/resources/components/colorpicker/: __init__.py  colorpicker.js
src/genro_ws_web/resources/components/tree/: __init__.py  tree.css
src/genro_ws_web/widgets/: __init__.py  components.py  containers.py
