# Copyright 2025 Softwell S.r.l.
# Licensed under the Apache License, Version 2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genro-ws-web"
version = "0.1.0"
description = "WebSocket-driven reactive SPA framework in pure Python, on genro-builders + genro-asgi"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Genropy Team"}
]
keywords = [
    "spa",
    "reactive",
    "websocket",
    "server-driven",
    "genro",
    "genropy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "genro-builders>=0.18.0",
    "genro-asgi>=0.5.0",
    "genro-routes>=0.22.0",
    "genro-tytx>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
genro-ws-live = "genro_ws_web.cli:main"

[project.urls]
Homepage = "https://github.com/genropy/genro-ws-web"
Repository = "https://github.com/genropy/genro-ws-web"

[tool.hatch.build.targets.wheel]
packages = ["src/genro_ws_web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=genro_ws_web --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]
